# keycloak-python-cli

./: .gitignore  README.de.md  README.md  commands.json  commands.txt  commands.yaml  config.example.json  kc.exe.spec  pyproject.toml
src/kc/: cli.py  roles_create_fixed.py
src/kc/commands/: client_roles.py  client_scopes.py  clients.py  realms.py  roles.py  users.py
src/kc/core/: audit.py  box.py  config.py  keycloak.py  logging.py  runtime.py
