[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kc"
version = "0.1.0"
description = "Keycloak CLI"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.24.1",
]

[project.scripts]
kc = "kc.cli:main"
kc-roles-create-fixed = "kc.roles_create_fixed:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
